src/test/examples/custom/valid/class/classFunctionCanAccessPublicAttributes.wacc
# Class functions can access public class attributes

begin
  class H is 
    public int v
    private int J(int k) is 
      return 0
    end
    private int f() is 
       v = 3 ;
       return v
    end
  end
  int v = 0 
end